--- a/static/glab.css
+++ b/static/glab.css
@@ -8,7 +8,7 @@ IMG {
 	BORDER-TOP-STYLE: none; BORDER-RIGHT-STYLE: none; BORDER-LEFT-STYLE: none; BORDER-BOTTOM-STYLE: none
 }
 H1 {
-	FONT-WEIGHT: normal
+	FONT-WEIGHT: normal; FONT-SIZE: xx-large
 }
 H2 {
 	MARGIN-TOP: 12px; FONT-WEIGHT: normal; MARGIN-BOTTOM: 0px
